--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
     <title>Meine Webside</title>
 </head>
 <body>
-    <p><h1>Überschriften</h1> erstelle ich mit h1-h6. Die größe und somit auch die Wichtigkeit dieser Überschrift lassen sich mit h1 bis h6 einstellen.</p> 
-    <p> p verwende ich um einen Absatz zu erstellen. Alles in einem P wird innerhalb eines Absatzes auf der Webside angezeigt.</p>
-    <p><strong>strong verwende ich um teile in einem Text fett zu machen</strong></p>
-    <p><em>em verwende ich um teile in einem Text kursiv zu machen</em></p>
+    <p>Eine ungeordnete liste erstelle ich mit ul.</p>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    <p>Eine geordnete liste erstelle ich mit ol</p>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
 </body>
 </html>
